--- a/templates/404.html
+++ b/templates/404.html
@@ -1,25 +1,22 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>404 Error - Study Strategies</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/png" href="/static/images/icon/favicon.ico">
-<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/font-awesome.min.css">
-<link rel="stylesheet" href="/static/css/themify-icons.css">
-<link rel="stylesheet" href="/static/css/metisMenu.css">
-<link rel="stylesheet" href="/static/css/owl.carousel.min.css">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>404 Error - Study Strategies</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="/static/images/icon/favicon.ico">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/themify-icons.css">
 
-<link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all"/>
 
-<link rel="stylesheet" href="/static/css/typography.css">
-<link rel="stylesheet" href="/static/css/default-css.css">
-<link rel="stylesheet" href="/static/css/styles.css">
-<link rel="stylesheet" href="/static/css/responsive.css">
+    <link rel="stylesheet" href="/static/css/typography.css">
+    <link rel="stylesheet" href="/static/css/default-css.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/responsive.css">
 
-<script src="/static/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 8]>
@@ -27,40 +24,33 @@
         <![endif]-->
 
 <div id="preloader">
-<div class="loader"></div>
+    <div class="loader"></div>
 </div>
 
 
 <div class="error-area ptb--100 text-center">
-<div class="container">
-<div class="error-content">
-<h2>404</h2>
-<p>Ooops! Something went wrong .</p>
-<a href="{{ url_for('index') }}">Back to Home</a>
-</div>
-</div>
+    <div class="container">
+        <div class="error-content">
+            <h2>404</h2>
+            <p>Ooops! Something went wrong .</p>
+            <a href="{{ url_for('index') }}">Back to Home</a>
+        </div>
+    </div>
 </div>
 
-
-<script src="/static/js/vendor/jquery-2.2.4.min.js"></script>
-
-<script src="/static/js/popper.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
-<script src="/static/js/owl.carousel.min.js"></script>
-<script src="/static/js/metisMenu.min.js"></script>
-<script src="/static/js/jquery.slimscroll.min.js"></script>
-<script src="/static/js/jquery.slicknav.min.js"></script>
-
-<script src="/static/js/plugins.js"></script>
 <script src="/static/js/scripts.js"></script>
-
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-23581568-13');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-23581568-13');
 </script>
 </body>
 </html>
