--- a/templates/index.html
+++ b/templates/index.html
@@ -1,84 +1,91 @@
 {% extends 'base.html' %}
 {% set active_page = "index" %}
 {% block content %}
-<div class="main-content-inner">
-<div class="row justify-content-center" >
-<div class="col-lg-3 mt-5">
-<div class="card">
-<div class="card-body">
-    <h4 align="center" class="header-title">Generate</h4>
-    <form method="POST" enctype="multipart/form-data">
-        {{ form.csrf_token }}
-        <div>
-            <label class="col-form-label">Graph type:</label>
-        </div>
-        <div class="form-group">
-        {% for subfield in form.type %}
-            <div class="custom-control custom-radio custom-control-inline">
-            {{ subfield(class="custom-control-input", onclick="clicked('"+subfield.label.text+"')") }}
-            {{ subfield.label(class="custom-control-label") }}
+    <div class="main-content-inner">
+        <div class="row justify-content-center">
+            <div class="col-lg-3 mt-5">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 align="center" class="header-title">Generate</h4>
+                        <form method="POST" enctype="multipart/form-data">
+                            {{ form.csrf_token }}
+                            <div>
+                                <label class="col-form-label">Graph type:</label>
+                            </div>
+                            <div class="form-group">
+                                {% for subfield in form.type %}
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        {{ subfield(class="custom-control-input", onclick="clicked('"+subfield.label.text+"')") }}
+                                        {{ subfield.label(class="custom-control-label") }}
 
-        </div>
-            {% endfor %}
-        </div>
-        <div class="form-row justify-content-center">
-            <div class="form-row justify-content-center">
-                <div class="col-md-5 mb-3">
-                    <label class="col-form-label">Semester</label>
-                    {{ form.semester(class="form-control", required="") }}
-                </div>
-                <div class="col-md-4 mb-3" id="crngroup">
-                    <label class="col-form-label">CRN</label>
-                    {{ form.CRN(class="form-control", required="") }}
-                </div>
-                <div class="col-md-3 mb-3" id="examgroup">
-                    <label class="col-form-label">Exam</label>
-                    {{ form.exam(class="form-control", required="") }}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                            <div class="form-row justify-content-center">
+                                <div class="form-row justify-content-center">
+                                    <div class="col-md-5 mb-3">
+                                        <label class="col-form-label">Semester</label>
+                                        {{ form.semester(class="form-control", required="") }}
+                                    </div>
+                                    <div class="form-group" id="crngroup">
+                                        <label class="col-form-label">CRN</label>
+                                        {{ form.CRN(class="form-control", required="") }}
+                                    </div>
+                                    <div class="form-group" id="examgroup">
+                                        <label class="col-form-label">Exam</label>
+                                        {{ form.exam(class="form-control", required="") }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group" id="color">
+                                <div class="form-group">
+                                    <label class="col-form-label">Passive Color:</label>
+                                    {{ form.color_passive(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-form-label">Active Color:</label>
+                                    {{ form.color_active(class="form-control") }}
+                                </div>
+                            </div>
+                            <div align="center">
+                                <input type="submit" class="btn btn-primary updateButton" id='generate' value="Generate">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="form-group" id="color">
-        <div class="form-group">
-            <label class="col-form-label">Passive Color:</label>
-            {{ form.color_passive(class="form-control") }}
-        </div>
-        <div class="form-group">
-            <label class="col-form-label">Active Color:</label>
-            {{ form.color_active(class="form-control") }}
-        </div>
-        </div>
-        <div align="center">
-            <input type="submit" class="btn btn-primary" value="Generate">
-        </div>
-    </form>
-</div>
-</div>
-</div>
-    {% if filename != '' %}
-    <div class="col-lg-9 mt-5">
-    <img src="{{url_for('static', filename=filename)}}">
-        {% endif %}
+            {% if filename != '' %}
+                <div class="col-lg-9 mt-5">
+                <img src="{{ url_for('static', filename=filename) }}" alt="">
+            {% endif %}
 
-</div>
-</div>
-</div>
+            </div>
+        </div>
+    </div>
     <script>
-        window.onload = function() {
-            document.getElementById("color").style.display = "none"
-            document.getElementById("examgroup").style.display = "none"
-        }
+        window.onload = function () {
+            document.getElementById("color").style.display = "none";
+            document.getElementById("examgroup").style.display = "none";
+        };
 
-        function clicked(element){
-            if(element == "By Exam"){
-                document.getElementById("crngroup").style.display = "inline"
-                document.getElementById("color").style.display = "none"
-                document.getElementById("examgroup").style.display = "none"
-            }
-            else if(element == "By Class"){
-            }else{
-                document.getElementById("crngroup").style.display = "inline"
-                document.getElementById("color").style.display = "inline"
-                document.getElementById("examgroup").style.display = "inline"
+        function clicked(element) {
+            if (element === "By Exam") {
+                document.getElementById("CRN").required = true;
+                document.getElementById("exam").required = true;
+                document.getElementById("crngroup").style.display = "inline";
+                document.getElementById("color").style.display = "none";
+                document.getElementById("examgroup").style.display = "none";
+            } else if (element === "By Class") {
+                document.getElementById("CRN").required = false;
+                document.getElementById("exam").required = false;
+                document.getElementById("crngroup").style.display = "none";
+                document.getElementById("color").style.display = "none";
+                document.getElementById("examgroup").style.display = "none";
+
+            } else {
+                document.getElementById("crngroup").style.display = "inline";
+                document.getElementById("color").style.display = "inline";
+                document.getElementById("examgroup").style.display = "inline";
             }
         }
 
@@ -86,39 +93,41 @@
         let CRN_select = document.getElementById('CRN');
         let test_select = document.getElementById('exam');
 
-        semester_select.onchange = function() {
-            semester = semester_select.value;
+        semester_select.onchange = function () {
+            let semester = semester_select.value;
 
-            fetch('/CRN/' + semester).then(function(response) {
+            fetch('/CRN/' + semester).then(function (response) {
 
-                response.json().then(function(data) {
+                response.json().then(function (data) {
                     let optionHTML = '<option value="">---</option>';
 
-                    for(let CRN of data.CRNs) {
+                    for (let CRN of data.CRNs) {
                         optionHTML += '<option value="' + CRN.class_id + '">' + CRN.CRN + '</option>';
                     }
 
-                     CRN_select.innerHTML = optionHTML;
+                    CRN_select.innerHTML = optionHTML;
 
                 });
             });
-        }
+        };
 
-        CRN_select.onchange = function() {
+        CRN_select.onchange = function () {
             CRN = CRN_select.value;
 
-            fetch('/test/' + CRN).then(function(response) {
+            fetch('/test/' + CRN).then(function (response) {
 
-                response.json().then(function(data) {
+                response.json().then(function (data) {
                     let optionHTML = '';
 
-                    for(let test of data.tests) {
+                    for (let test of data.tests) {
                         optionHTML += '<option value="' + test.exam_num + '">' + test.exam_num + '</option>';
                     }
 
-                     test_select.innerHTML = optionHTML;
+                    test_select.innerHTML = optionHTML;
                 });
             });
         }
     </script>
+    <script src="http://code.jquery.com/jquery.js"></script>
+
 {% endblock %}
